--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <img src="img/me.gif" width="400"/>
         <h1>Hello World</h1>
         <p>
-            I am <strong>Ummu Kulthum Binte Eliase</strong>,and I welcome you to my <del>extremely amazing</del> ahem <em>humble</em> 
+            I am <strong>Ummu</strong>,and I welcome you to my <del>extremely amazing</del> ahem <em>humble</em> 
             website. 
         </p>
         <p>
